# blackwell-cli

./: BLACKWELL_CLI_PLAN.md  BLACKWELL_CORE_EXTRACTION_PLAN.md  CLI_INTEGRATION_COMPLETE.md  CLI_USER_GUIDE.md  CORE_PRIMITIVES_STABILIZATION_PLAN.md  FUTURE_MEDIA_FACTORY.md  PLATFORM_NATIVE_ARCHITECTURE_ANALYSIS.md  PROVIDER_GAP_ANALYSIS_AND_STRATEGY.md  README.md  SERVICE_INTEGRATION.md  SHOPIFY_TIER_ARCHITECTURE_ANALYSIS.md  STACK_UNIFICATION_PLAN.md  debug_platform.py  pyproject.toml  test_fix_isolated.py  test_integration.py  test_integration_minimal.py  test_providers_fix.py
blackwell/: __init__.py  main.py
blackwell/commands/: __init__.py  bootstrap.py  config.py  cost.py  create.py  delete.py  deploy.py  init.py  list.py  migrate.py  platform.py  providers_enhanced.py  templates.py
blackwell/core/: __init__.py  cdk_bootstrap_checker.py  client_manager.py  config_manager.py  cost_calculator.py  dynamic_provider_matrix.py  fast_provider_registry.py  platform_integration.py  provider_matrix.py  system_doctor.py
blackwell/schemas/: history.schema.json  index.schema.json  manifest.schema.json  state.schema.json
docs/: cost-optimization.md  getting-started.md  provider-guide.md
